# ibl-photometry

./: .gitignore  .pdm-python  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-package.yaml  python-package.yml  run_tests.yaml
docs/: literature.docx  literature.md  photometry_acquisition_user_guide.md  references.bib
src/examples/: csv_preprocessing.py  data_analysis.ipynb  data_loading.ipynb  data_processing.ipynb  doric_csv_preprocessing.py  example_raw_npdata_plot.py  load_photometry_data.ipynb  neurophotometrics_preprocessing.py  photometry_exploration.ipynb  photometry_exploration_alex.ipynb  photometry_exploration_kcenia.ipynb  process_photometry_data.ipynb  synthetic_preprocessing.py
src/examples/pipeline/: 00_get_recordings_dataframe.py  01_sync_photometry.py
src/gui/: QC_manual_gui.py  eids_sample.qc.csv  eids_sample.txt  rawdata_visualizer.py
src/iblphotometry/: BCW_bug_solution_KB.py  BCW_bugged_eids_list.csv  analysis.py  behavior.py  bleach_corrections.py  dsp.py  evaluate_bleach_corrections.ipynb  evaluate_grubbs.ipynb  evaluation.py  fpio.py  helpers.py  io (Copy).py  io.py  kb_allthecode.py  kcenia.py  loaders.py  metrics.py  neurophotometrics.py  neurophotometrics_definitions.py  optimization.py  outlier_detection.py  photometry.ipynb  photometry_psth_code.py  pipelines.py  plots.py  plotters.py  preprocessing.py  processing.py  qc.py  qc_alejandro.py  qc_carolina.py  qc_kcenia.py  run_qc.py  sliding_operations.py  synthetic.py  tasks.py  utils.py  validation.py
src/iblphotometry_tests/: _test_plots.py  base_tests.py  test_loaders.py  test_metrics.py  test_pipelines.py  test_plots.py  test_processing.py
src/scripts/: across_session_analysis.py  run_qc.py  trial_type_definitions.py
src/tests/: base_tests.py  data_paths.py  integration.py  test_loaders.py  test_metrics.py  test_pipelines.py  test_plots.py  test_preprocessing.py
tests/: _test_plots.py  base_tests.py  test_analysis.py  test_extractors.py  test_loaders.py  test_metrics.py  test_pipelines.py  test_plotters.py  test_processing.py
(+17 files in other folders)
