[build-system]
requires      = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ibl-photometry"
description = "IBL photometry module"
dynamic = [ "version" ]
keywords = [ "IBL", "neuroscience", "photometry"]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "IBL staff", email = "info@internationalbrainlab.org"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pandera[pandas] >= 0.24.0",
    "pywavelets",
    "matplotlib",
    "ibllib>=3.4.0",
    "ONE-api>=3.3.0",
]

[project.optional-dependencies]
analysis = [
    "pynapple"
]

[tool.pdm.version]
source = "file"
path = 'src/iblphotometry/__init__.py'

[project.urls]
"Homepage" = "https://github.com/int-brain-lab/ibl-photometry"

[options.packages.find]
where = "src"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
indent-width = 4
line-length = 130

[tool.ruff.lint.isort]
known-first-party = [ "ibl*", "one*", "pybpod*" ]

[tool.ruff.format]
quote-style = "single"
